# CL_KAN

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  dataset-leakage-checker.md  experiment-auditor.md  loss-auditor.md  pytorch-debugger.md
.claude/commands/: check-baselines.md  export-results.md  review-experiment.md  review-loss.md  run-smoke.md
.claude/skills/contrastive-loss-engineer/: SKILL.md
configs/data/: chestmnist.yaml
configs/experiment/: smoke_chestmnist_mlp_infonce.yaml  smoke_mlp.yaml
configs/loss/: fn_weighted_kan.yaml  fn_weighted_mlp.yaml  geometry_regularizers.yaml  infonce.yaml  supcon_multilabel.yaml
configs/model/: mlp_baseline.yaml  residual_fastkan_warp.yaml  resnet18_fastkan.yaml  resnet18_mlp.yaml
scripts/: count_params.py  run_smoke.py
src/: __init__.py  train.py
src/data/: __init__.py  _chestmnist_utils.py  chestmnist.py
src/losses/: __init__.py  fn_weighted_infonce.py  infonce.py  masks.py  multilabel_overlap.py  supcon.py
src/metrics/: __init__.py  geometry.py
src/models/: __init__.py  backbones.py  pair_scorer.py  projectors.py
src/utils/: __init__.py
tests/: conftest.py  test_chestmnist_loader.py  test_fastkan.py  test_fn_weighted_loss.py  test_geometry_metrics.py  test_infonce_equivalence.py  test_kan_pair_scorer.py  test_masks.py  test_multilabel_masks.py  test_pair_scorer.py  test_param_count.py  test_projectors.py  test_residual_warp.py  test_smoke.py  test_supcon_multilabel.py
(+8 files in other folders)
